tests/conc/reject/chan_reassign.ty
fn main():
    ch := channel(int, 4)
    ch = channel(int, 4)
    close(ch)
